added progress indicators to views with long load times

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Final.Project.Wang.Jessica</string>
+    <string name="app_name">Panfare</string>
     <string name="hello_world">Hello world!</string>
-    <string name="label_ingredient">Ingredient</string>
+    <string name="label_ingredient">Ingredient:</string>
     <string name="label_quantity">Quantity</string>
     <string name="add_ingredient">Add</string>
     <string name="msg_bad_input">Please enter a valid value</string>
